Updating the design

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
   <title>Oscar Palomino | Ingeniero Industrial - Data Scientist</title>
 </head>
 <body>
   <header>
     <nav class="navContainer">
-      <div class="logo"></div>
-      <figure class="imageContainer"><img src="/" alt="Logo Oscar Palomino"></figure>
-      <div class="logoContent">
-        <h1>Oscar Palomino</h1>
+      <div class="logo">
+        <figure class="imageContainer"><img src="/" alt="Logo Oscar Palomino"></figure>
+        <div class="logoContent">
+          <h1>Oscar Palomino</h1>
+        </div>
       </div>
       <div class="menuContainer">
         <ul>
@@ -21,75 +23,71 @@
       </div>
     </nav>
   </header>
-  <div class="Hero">
-    <div class="heroContent">
-      <h1>Ingeniero Industrial Data Scientist</h1>
-      <p>Soy un ingeniero industrial y científico de datos de Colombia.</p>
-      <p>Disponible para nuevos proyectos.</p><a href="mailto:ing.oscarp1@gmail.com"><i> </i>
-        <p>Contáctame</p></a>
+  <section class="HeroContent">
+    <div class="Hero">
+      <div class="heroContent">
+        <h1>Ingeniero Industrial Data Scientist</h1>
+        <p>Soy un ingeniero industrial y científico de datos de Colombia.</p>
+        <p>Disponible para nuevos proyectos.</p><a href="mailto:ing.oscarp1@gmail.com"><i> </i>
+          <p>Contáctame</p></a>
+      </div>
+      <figure class="heroImageContainer"><img src=""></figure>
+      <div class="socialMedia">
+        <ul>
+          <li>Facebook</li>
+          <li>Github</li>
+          <li>LinkedIn</li>
+          <li>Twitter</li>
+          <li>Instagram</li>
+        </ul>
+      </div>
     </div>
-    <figure class="heroImageContainer"><img src=""></figure>
-    <div class="socialMedia">
-      <ul>
-        <li>Facebook</li>
-        <li>Github</li>
-        <li>LinkedIn</li>
-        <li>Twitter</li>
-        <li>Instagram</li>
-      </ul>
-    </div>
-  </div>
+  </section>
   <main>
     <section class="projectsContainer">
-      <h3>Proyectos</h3>
+      <h3 class="title">Proyectos</h3>
       <div class="boxContainer">
         <div class="boxContent">
           <h1>PlatziVideo</h1>
           <h2>HTML y CSS</h2>
-          <h3>HTML y CSS<span> <a href="null" target="_blank">https://oscarpalominoc.github.io/platzi-video/</a></span></h3>
+          <h3>Puedes verla en: <span> <a href="null" target="_blank">https://oscarpalominoc.github.io/platzi-video/</a></span></h3>
           <p>Página web en la que los usuarios registrados pueden guardar su playlist favorita y compartila con sus amigos.</p>
           <p>Para el diseño se implementó CSS Grid.</p>
         </div>
-        <div class="boxImageContainer">
-          <figure class="boxImage"><img src="/" alt="PlatziVideo"/></figure>
-        </div>
+        <div class="boxImageContainer"><img src="/" alt="PlatziVideo"/></div>
       </div>
       <div class="boxContainer">
         <div class="boxContent">
           <h1>Movi.es</h1>
           <h2>HTML y CSS</h2>
-          <h3>HTML y CSS<span> <a href="null" target="_blank">https://oscarpalominoc.github.io/grid-css-movi/</a></span></h3>
+          <h3>Puedes verla en: <span> <a href="null" target="_blank">https://oscarpalominoc.github.io/grid-css-movi/</a></span></h3>
           <p>Página web en la que los usuarios registrados pueden ver todas las clases de películas que estén disponibles.</p>
           <p>Para el diseño se implementó CSS Grid.</p>
         </div>
-        <div class="boxImageContainer">
-          <figure class="boxImage"><img src="/" alt="Movi.es"/></figure>
-        </div>
+        <div class="boxImageContainer"><img src="/" alt="Movi.es"/></div>
       </div>
       <div class="boxContainer">
         <div class="boxContent">
           <h1>Brand</h1>
           <h2>HTML y CSS</h2>
-          <h3>HTML y CSS<span> <a href="null" target="_blank">https://oscarpalominoc.github.io/digital-product/</a></span></h3>
+          <h3>Puedes verla en: <span> <a href="null" target="_blank">https://oscarpalominoc.github.io/digital-product/</a></span></h3>
           <p>Página web en la que puedes comprar todas las cajas con gatitos que desees. Si llegas a efectuar una compra, lo más probable es que no te llegue una caja con gatitos, pero si me apoyarías a continuar aprendiendo.</p>
           <p>Para el diseño se implementó display Flex.</p>
         </div>
-        <div class="boxImageContainer">
-          <figure class="boxImage"><img src="/" alt="Cajas con gatitos."/></figure>
-        </div>
+        <div class="boxImageContainer"><img src="/" alt="Cajas con gatitos."/></div>
       </div>
     </section>
     <section class="skills"></section>
     <section class="contact">
-      <h3>¿Trabajamos juntos?</h3>
-      <div class="formContact">
+      <h3 class="title">¿Trabajamos juntos?</h3>
+      <form class="formContact">
         <label>Nombre</label>
         <input class="formInput" type="text"/>
         <label>Email</label>
         <input class="formInput" type="text"/>
         <label>Mensaje</label>
         <input class="formInputMessage" type="text"/><a class="button" href="/" target="_blank">Enviar</a>
-      </div>
+      </form>
     </section>
   </main>
   <footer>
