Adding skills styles. The skills are not positioned

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="heroContent">
         <h1>Ingeniero Industrial, Data Scientist</h1>
         <p>Soy un ingeniero industrial y científico de datos de Colombia.</p>
-        <p>Disponible para nuevos proyectos.</p><a href="mailto:ing.oscarp1@gmail.com"><img src="../assets/letter.svg">
+        <p>Disponible para nuevos proyectos.</p><a href="mailto:ing.oscarp1@gmail.com"><img src="../assets/Letter.svg">
           <p>Contáctame</p></a>
       </div>
       <figure class="heroImageContainer"><img src="../assets/Hero.png" alt="Oscar Palomino" srcset="../assets/Hero.png, ../assets/Hero@2x.png 2x"></figure>
@@ -80,15 +80,21 @@
   </main>
   <section class="skills" id="skills">
     <h3 class="title">Habilidades</h3>
-    <div class="imageContainer"><img src="../assets/SkillsSection.png" alt="Habilidades" srcset="../assets/SkillsSection.png, ../assets/SkillsSection@2x.png 2x"></div><span class="skillName">
-      <p>Matemáticas</p></span><span class="skillName">
-      <p>Inglés</p></span><span class="skillName">
-      <p>C#</p></span><span class="skillName">
-      <p>Diseño web</p></span><span class="skillName">
-      <p>Maestro Pokemon</p></span><span class="skillName">
-      <p>Python</p></span><span class="skillName">
-      <p>Data Science</p></span><span class="skillName">
-      <p>Javascript</p></span>
+    <div class="skillsDivision">
+      <div class="skillsLeft"><span class="skillName left">
+          <p>Matemáticas</p></span><span class="skillName right">
+          <p>Inglés</p></span><span class="skillName left">
+          <p>C#</p></span><span class="skillName right">
+          <p>Diseño web</p></span>
+      </div>
+      <div class="imageContainer"><img src="../assets/SkillsSection.png" alt="Habilidades" srcset="../assets/SkillsSection.png, ../assets/SkillsSection@2x.png 2x"></div>
+      <div class="skillsRight"><span class="skillName right">
+          <p>Maestro Pokemon</p></span><span class="skillName left">
+          <p>Python</p></span><span class="skillName right">
+          <p>Data Science</p></span><span class="skillName left">
+          <p>Javascript</p></span>
+      </div>
+    </div>
   </section>
   <main>
     <section class="contact" id="contact">
