--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <p>Disponible para nuevos proyectos.</p><a href="mailto:ing.oscarp1@gmail.com"><img src="../assets/Letter.svg">
           <p>Contáctame</p></a>
       </div>
-      <figure class="heroImageContainer"><img src="../assets/Hero.png" alt="Oscar Palomino" srcset="../assets/Hero.png, ../assets/Hero@2x.png 2x"></figure>
+      <figure class="heroImageContainer"><img src="../assets/Hero.webp" alt="Oscar Palomino" srcset="../assets/Hero.webp, ../assets/Hero@2x.webp 2x"></figure>
       <div class="socialMedia">
         <ul>
-          <li> <a href="fb.me/oskr.epc" target="_blank"><img src="../assets/facebook.svg" alt="Facebook"></a></li>
+          <li> <a href="https://fb.me/oskr.epc" target="_blank"><img src="../assets/facebook.svg" alt="Facebook"></a></li>
           <li> <a href="https://github.com/OscarPalominoC" target="_blank"><img src="../assets/Github.svg" alt="GitHub"></a></li>
           <li> <a href="https://www.linkedin.com/in/oscarpalominocardenas/" target="_blank"><img src="../assets/LinkedIn.svg" alt="LinkedIn"></a></li>
           <li> <a href="https://twitter.com/OscarPalominoC" target="_blank"><img src="../assets/Twitter.svg" alt="Twitter"></a></li>
@@ -54,7 +54,7 @@
           <p>Página web en la que los usuarios registrados pueden guardar su playlist favorita y compartila con sus amigos.</p>
           <p>Para el diseño se implementó CSS Grid.</p>
         </div>
-        <div class="boxImageContainer"><img src="../assets/PlatziVideo Screen.png" alt="PlatziVideo"/></div>
+        <div class="boxImageContainer"><img src="../assets/PlatziVideoScreen.webp" alt="PlatziVideo"/></div>
       </div>
       <div class="boxContainer">
         <div class="boxContent">
@@ -64,7 +64,7 @@
           <p>Página web en la que los usuarios registrados pueden ver todas las clases de películas que estén disponibles.</p>
           <p>Para el diseño se implementó CSS Grid.</p>
         </div>
-        <div class="boxImageContainer"><img src="../assets/Movie Screen.png" alt="Movi.es"/></div>
+        <div class="boxImageContainer"><img src="../assets/MovieScreen.webp" alt="Movi.es"/></div>
       </div>
       <div class="boxContainer">
         <div class="boxContent">
@@ -74,7 +74,7 @@
           <p>Página web en la que puedes comprar todas las cajas con gatitos que desees. Si llegas a efectuar una compra, lo más probable es que no te llegue una caja con gatitos, pero si me apoyarías a continuar aprendiendo.</p>
           <p>Para el diseño se implementó display Flex.</p>
         </div>
-        <div class="boxImageContainer"><img src="../assets/Brand Screen.png" alt="Cajas con gatitos."/></div>
+        <div class="boxImageContainer"><img src="../assets/BrandScreen.webp" alt="Cajas con gatitos."/></div>
       </div>
     </section>
   </main>
@@ -87,7 +87,7 @@
           <p>C#</p></span><span class="skillName right">
           <p>Diseño web</p></span>
       </div>
-      <div class="imageContainer"><img src="../assets/SkillsSection.png" alt="Habilidades" srcset="../assets/SkillsSection.png, ../assets/SkillsSection@2x.png 2x"></div>
+      <div class="imageContainer"><img src="../assets/SkillsSection.webp" alt="Habilidades" srcset="../assets/SkillsSection.webp, ../assets/SkillsSection@2x.webp 2x"></div>
       <div class="skillsRight"><span class="skillName right">
           <p>Maestro Pokemon</p></span><span class="skillName left">
           <p>Python</p></span><span class="skillName right">
