--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <meta property="og:title" content="Oscar Palomino | Python Developer & Data Analyst" />
     <meta property="og:description" content="Python Developer and Data Analyst with expertise in web scraping, machine learning, and data visualization." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://oscarpalomino.dev/" />
   </head>
 
   <body>
